tests/baselines/reference/ComputedPropertyName9_es6.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName9_es6.ts(2,5): error TS1022: An index signature parameter must have a type annotation.
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName9_es6.ts(2,9): error TS2304: Cannot find name 'Type'.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName9_es6.ts (2 errors) ====
    class C {
       [e]: Type
        ~
!!! error TS1022: An index signature parameter must have a type annotation.
            ~~~~
!!! error TS2304: Cannot find name 'Type'.
    }